Feature ET-27: Keep Interactive Platform Profiles Running